Fixed Bug 68587 - Portal Plugins have cut of descenders on firefox
(cherry picked from commit 51af36bc9dc9f2aa07c8ce52fcd5fd341704fe27)

--- a/ui/apps/plugins/portal/recentfiles/style.less
+++ b/ui/apps/plugins/portal/recentfiles/style.less
@@ -19,6 +19,11 @@
         .title {
             font-weight: bold;
             .ellipsis();
+            // fix some issues with descenders in firefox
+            padding-bottom: 2px;
+        }
+        & > .clearfix {
+            margin-top: -2px;
         }
     }
 }
